--- a/index.html
+++ b/index.html
@@ -3,11 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Page</title>
+    <title>Beautiful Page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello, GitHub!</h1>
-    <p>This is a sample HTML page.</p>
+    <!-- 헤더 섹션 -->
+    <header>
+        <div class="container">
+            <h1>My Awesome Website</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- 메인 콘텐츠 -->
+    <main>
+        <section id="home">
+            <h2>Welcome to My Page</h2>
+            <p>This is a sample webpage with a header, footer, and navigation links.</p>
+        </section>
+
+        <section id="about">
+            <h2>About Us</h2>
+            <p>We provide amazing web development services.</p>
+        </section>
+
+        <section id="services">
+            <h2>Our Services</h2>
+            <ul>
+                <li>Web Design</li>
+                <li>Web Development</li>
+                <li>SEO Optimization</li>
+            </ul>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Email: contact@myawesomewebsite.com</p>
+        </section>
+    </main>
+
+    <!-- 푸터 섹션 -->
+    <footer>
+        <p>&copy; 2025 My Awesome Website | Designed by You</p>
+    </footer>
 </body>
 </html>
