--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gradient & Styled Sections</title>
+    <title>Styled Sections with Navigation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,42 +12,42 @@
         <h1>My Gradient Website</h1>
     </header>
 
-    <!-- 섹션 링크 -->
+    <!-- 네비게이션 링크 -->
     <div class="section-links">
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact Us</a>
+        <a href="#" onclick="showSection('home')">Home</a>
+        <a href="#" onclick="showSection('about')">About</a>
+        <a href="#" onclick="showSection('services')">Services</a>
+        <a href="#" onclick="showSection('contact')">Contact Us</a>
     </div>
 
-    <!-- 섹션 콘텐츠 -->
-    <section id="home" class="section-home">
-        <h2>Welcome to Home</h2>
-        <p>Experience the beauty of gradients and styled sections!</p>
-    </section>
+    <!-- 섹션들 -->
+    <main>
+        <section id="home" class="content active">
+            <h2>Welcome to Home</h2>
+            <p>Explore the beauty of gradients and styled sections here!</p>
+        </section>
 
-    <section id="about" class="section-about">
-        <h2>About Us</h2>
-        <p>Discover more about our journey and values.</p>
-    </section>
+        <section id="about" class="content">
+            <h2>About Us</h2>
+            <p>We are passionate about delivering amazing web experiences.</p>
+        </section>
 
-    <section id="services" class="section-services">
-        <h2>Our Services</h2>
-        <ul>
-            <li>Creative Design</li>
-            <li>Professional Development</li>
-            <li>Marketing Strategy</li>
-        </ul>
-    </section>
+        <section id="services" class="content">
+            <h2>Our Services</h2>
+            <ul>
+                <li>Creative Design</li>
+                <li>Web Development</li>
+                <li>Marketing Strategies</li>
+            </ul>
+        </section>
 
-    <!-- 중간 빈 공간 -->
-    <div class="spacer"></div>
+        <section id="contact" class="content">
+            <h2>Contact Us</h2>
+            <p>Email: contact@gradientweb.com</p>
+            <p>Phone: +123 456 7890</p>
+        </section>
+    </main>
 
-    <!-- Contact Us 섹션 -->
-    <section id="contact" class="section-contact">
-        <h2>Contact Us</h2>
-        <p>Email: support@gradientweb.com</p>
-        <p>Phone: +123 456 7890</p>
-    </section>
+    <script src="scripts.js"></script>
 </body>
 </html>
