--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- 기본 메타데이터 -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Styled Sections with Navigation</title>
+
+    <!-- 검색엔진 최적화 메타데이터 -->
+    <meta name="description" content="Welcome to My Gradient Website! Explore our amazing services including web design, web development, and creative marketing strategies. Contact us today!">
+    <meta name="keywords" content="web design, web development, creative marketing, SEO optimization, gradient website, responsive design">
+    <meta name="author" content="Your Name">
+    <meta name="robots" content="index, follow">
+
+    <!-- 소셜 미디어 메타데이터 (Open Graph) -->
+    <meta property="og:title" content="My Gradient Website">
+    <meta property="og:description" content="Explore our services and get in touch to elevate your web presence.">
+    <meta property="og:image" content="https://example.com/your-image.jpg">
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:type" content="website">
+
+    <!-- 트위터 카드 -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="My Gradient Website">
+    <meta name="twitter:description" content="Explore our services including web design, development, and marketing.">
+    <meta name="twitter:image" content="https://example.com/your-image.jpg">
+
+    <title>My Gradient Website - Web Design, Development & SEO</title>
+
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,7 +34,7 @@
         <h1>My Gradient Website</h1>
     </header>
 
-    <!-- 네비게이션 링크 -->
+    <!-- 네비게이션 -->
     <div class="section-links">
         <a href="#" onclick="showSection('home')">Home</a>
         <a href="#" onclick="showSection('about')">About</a>
