--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- 메인 콘텐츠 -->
     <main>
         <div class="video-container">
-            <video controls>
+            <video autoplay loop muted>
                 <source src="sample-video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
