--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회사 웹사이트</title>
+    <title>투명 헤더와 애니메이션 배경</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- 헤더 -->
     <header>
         <div class="logo">
-            <a href="#" onclick="location.reload();">
+            <a href="#">
                 <img src="company-logo.png" alt="회사 로고">
             </a>
         </div>
         <nav>
             <ul class="menu">
                 <li class="dropdown">
-                    <a href="#" onclick="toggleDropdown('intro-dropdown')">회사소개</a>
+                    <a href="#">회사소개</a>
                     <ul id="intro-dropdown" class="dropdown-content">
                         <li><a href="#">my회사소개</a></li>
                         <li><a href="#">연혁</a></li>
@@ -33,16 +33,10 @@
         </nav>
     </header>
 
-    <!-- 메인 콘텐츠 -->
-    <main>
-        <div class="video-container">
-            <video autoplay loop muted>
-                <source src="sample-video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div>
-    </main>
-
-    <script src="scripts.js"></script>
+    <!-- 배경 애니메이션 -->
+    <div class="animated-background">
+        <h1 class="overlay-text">Welcome to Our Website</h1>
+        <p class="overlay-subtext">Explore our services and experience excellence.</p>
+    </div>
 </body>
 </html>
