--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <meta keywords="번역, 한영 번역, 영한 번역, 전문 번역사">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-   
+      <!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JG0H0D9QJH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-XXXXXXXXXX');
+</script>
+    
 </head>
 <body>
     <!-- 헤더 -->
@@ -114,6 +122,6 @@
     <footer>
         <p>© 2025 아몬드 번역회사. 모든 권리 보유.</p>
         <p>문의: info@almondtranslation.com</p>
-    </footer>
+    </footer>  
 </body>
-</html>
+  </html>
