--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'G-XXXXXXXXXX');
+  gtag('config', 'G-JG0H0D9QJH');
 </script>
     
 </head>
